[gd_scene load_steps=11 format=3 uid="uid://mm526ovr34j7"]

[ext_resource type="Script" path="res://enemies/asteroid_01/asteroid_01.gd" id="1_3b8cp"]
[ext_resource type="Material" uid="uid://crbsx65ef4n10" path="res://shaders/asteroid_01.tres" id="2_3yglr"]
[ext_resource type="Texture2D" uid="uid://bwbldjd4xbb67" path="res://resources/asteroids/asteroid_brown_01.png" id="3_b6sue"]

[sub_resource type="SpriteFrames" id="SpriteFrames_nevrn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_b6sue")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ciqh6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_xmtaw"]
radius = 13.0

[sub_resource type="Animation" id="Animation_nef8n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_w0lxg"]
resource_name = "flash"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_imfmb"]
resource_name = "idle"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_igu50"]
_data = {
"RESET": SubResource("Animation_nef8n"),
"flash": SubResource("Animation_w0lxg"),
"idle": SubResource("Animation_imfmb")
}

[node name="asteroid" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_3b8cp")

[node name="sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = ExtResource("2_3yglr")
sprite_frames = SubResource("SpriteFrames_nevrn")
frame_progress = 0.988861

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ciqh6")
debug_color = Color(1, 0, 0.701961, 0.419608)

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="collision_shape" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("CircleShape2D_xmtaw")

[node name="visibility_notifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="spawn_hit" type="Node2D" parent="."]

[node name="hit_flash_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_igu50")
}

[connection signal="body_entered" from="hitbox" to="." method="on_hitbox_body_entered"]
[connection signal="screen_exited" from="visibility_notifier" to="." method="on_asteroid_visibility_notifier_screen_exited"]
